Bug 224261 - REGRESSION (r270849): Button content fails to render on apple.com "Blood Oxygen"/"ECG"
Summary: REGRESSION (r270849): Button content fails to render on apple.com "Blood Oxyg...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: zalan
URL:
Keywords: InRadar
: 225354 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-04-06 20:17 PDT by zalan
Modified: 2021-05-05 01:32 PDT (History)
12 users (show)

See Also:


Attachments
Patch (6.56 KB, patch)
2021-04-06 20:56 PDT, zalan
no flags Details | Formatted Diff | Diff
Patch (6.56 KB, patch)
2021-04-06 21:00 PDT, zalan
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description zalan 2021-04-06 20:17:23 PDT
go to https://www.apple.com/watch/compare/ and tap on Blood Oxygen.

<rdar://75776731>
Comment 1 zalan 2021-04-06 20:56:24 PDT
Created attachment 425349 [details]
Patch
Comment 2 Simon Fraser (smfr) 2021-04-06 20:58:21 PDT
Comment on attachment 425349 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=425349&action=review

> Source/WebCore/rendering/style/RenderStyle.cpp:1223
> +    // but a repaint type of change (e.g. color change) does not necessarily triggers recomposition). 

"does not necessarily triggers" -> "does not necessarily trigger"
Comment 3 zalan 2021-04-06 21:00:14 PDT
Created attachment 425351 [details]
Patch
Comment 4 EWS 2021-04-07 08:55:03 PDT
Committed r275607: <https://commits.webkit.org/r275607>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 425351 [details].
Comment 5 Antti Koivisto 2021-05-05 01:32:03 PDT
*** Bug 225354 has been marked as a duplicate of this bug. ***